@@ -15,6 +15,8 @@ v0.5 (20160818)
 
 - we now check for the correct types in the type, validation, identifier and required columns.
 
+- further validation includes making sure every record has a value for the required fields and that form names run consecutively and that subsections fall completely within forms and sections (i.e. don't "straddle" two or more forms / sections)
+
 
 v0.4.1 (20160817)
 ---------------
